--- a/index.html
+++ b/index.html
@@ -6,34 +6,34 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Hyeri's Portfolio</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/animate.min.css" rel="stylesheet"> 
-    <link href="css/lightbox.css" rel="stylesheet"> 
-	<link href="css/main.css" rel="stylesheet">
-	<link href="css/responsive.css" rel="stylesheet">
+    <link href="https://hyeri0609.github.io/Portfolio/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://hyeri0609.github.io/Portfolio/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://hyeri0609.github.io/Portfolio/css/animate.min.css" rel="stylesheet"> 
+    <link href="https://hyeri0609.github.io/Portfolio/css/lightbox.css" rel="stylesheet"> 
+	<link href="https://hyeri0609.github.io/Portfolio/css/main.css" rel="stylesheet">
+	<link href="https://hyeri0609.github.io/Portfolio/css/responsive.css" rel="stylesheet">
 
     <!--[if lt IE 9]>
-	    <script src="js/html5shiv.js"></script>
-	    <script src="js/respond.min.js"></script>
+	    <script src="https://hyeri0609.github.io/Portfolio/js/html5shiv.js"></script>
+	    <script src="https://hyeri0609.github.io/Portfolio/js/respond.min.js"></script>
     <![endif]-->       
     
-<link rel="apple-touch-icon" sizes="57x57" href="images/ico/apple-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60" href="images/ico/apple-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="images/ico/apple-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="images/ico/apple-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="images/ico/apple-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="images/ico/apple-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144" href="images/ico/apple-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="152x152" href="images/ico/apple-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="images/ico/apple-icon-180x180.png">
-<link rel="icon" type="image/png" sizes="192x192"  href="images/ico/android-icon-192x192.png">
-<link rel="icon" type="image/png" sizes="32x32" href="images/ico/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="96x96" href="images/ico/favicon-96x96.png">
-<link rel="icon" type="image/png" sizes="16x16" href="images/ico/favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="57x57" href="https://hyeri0609.github.io/Portfolio/images/ico/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="https://hyeri0609.github.io/Portfolio/images/ico/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="https://hyeri0609.github.io/Portfolio/images/ico/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="https://hyeri0609.github.io/Portfolio/images/ico/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="https://hyeri0609.github.io/Portfolio/images/ico/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="https://hyeri0609.github.io/Portfolio/images/ico/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="https://hyeri0609.github.io/Portfolio/images/ico/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="https://hyeri0609.github.io/Portfolio/images/ico/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="https://hyeri0609.github.io/Portfolio/images/ico/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="https://hyeri0609.github.io/Portfolio/images/ico/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://hyeri0609.github.io/Portfolio/images/ico/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="https://hyeri0609.github.io/Portfolio/images/ico/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="https://hyeri0609.github.io/Portfolio/images/ico/favicon-16x16.png">
 <link rel="manifest" href="images/ico/manifest.json">
 <meta name="msapplication-TileColor" content="#ffffff">
-<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+<meta name="msapplication-TileImage" content="https://hyeri0609.github.io/Portfolio/images/ico/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
 
 </head>
@@ -337,8 +337,9 @@
                 </div>
                 <div class="col-sm-12">
                     <div class="copyright-text text-center">
-                        <p>&copy; Your Company 2014. All Rights Reserved.</p>
+                        <p>&copy; hyeri0609 2017. All Rights Reserved.</p>
                         <p>Crafted by <a target="_blank" href="http://designscrazed.org/">Allie</a></p>
+                        <p>Modified by <a target="_blank" href="https://hyeri0609.github.io/Portfolio/">hyeri0609</a></p>
                     </div>
                 </div>
             </div>
@@ -346,10 +347,10 @@
     </footer>
     <!--/#footer-->
 
-    <script type="text/javascript" src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/lightbox.min.js"></script>
-    <script type="text/javascript" src="js/wow.min.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>   
+    <script type="text/javascript" src="https://hyeri0609.github.io/Portfolio/js/jquery.js"></script>
+    <script type="text/javascript" src="https://hyeri0609.github.io/Portfolio/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="https://hyeri0609.github.io/Portfolio/js/lightbox.min.js"></script>
+    <script type="text/javascript" src="https://hyeri0609.github.io/Portfolio/js/wow.min.js"></script>
+    <script type="text/javascript" src="https://hyeri0609.github.io/Portfolio/js/main.js"></script>   
 </body>
 </html>
