--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <link rel="icon" type="image/png" sizes="32x32" href="https://hyeri0609.github.io/Portfolio/images/ico/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="96x96" href="https://hyeri0609.github.io/Portfolio/images/ico/favicon-96x96.png">
 <link rel="icon" type="image/png" sizes="16x16" href="https://hyeri0609.github.io/Portfolio/images/ico/favicon-16x16.png">
-<link rel="manifest" href="images/ico/manifest.json">
+<link rel="manifest" href="https://hyeri0609.github.io/Portfolio/images/ico/manifest.json">
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="https://hyeri0609.github.io/Portfolio/images/ico/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
@@ -66,7 +66,7 @@
                     </button>
 
                     <a class="navbar-brand" href="index.html">
-                    	<h1><img src="images/logo.png" alt="logo"></h1>
+                    	<h1><img src="https://hyeri0609.github.io/Portfolio/images/logo.png" alt="logo"></h1>
                     </a>
                     
                 </div>
@@ -129,14 +129,14 @@
                     <p>Boudin doner frankfurter pig. Cow shank bresaola pork loin tri-tip tongue venison pork belly meatloaf short loin landjaeger biltong beef ribs shankle chicken andouille.</p>
                     <a href="#" class="btn btn-common">SIGN UP</a>
                 </div>
-                <img src="images/home/slider/slide1/house.png" class="img-responsive slider-house" alt="slider image">
-                <img src="images/home/slider/slide1/circle1.png" class="slider-circle1" alt="slider image">
-                <img src="images/home/slider/slide1/circle2.png" class="slider-circle2" alt="slider image">
-                <img src="images/home/slider/slide1/cloud1.png" class="slider-cloud1" alt="slider image">
-                <img src="images/home/slider/slide1/cloud2.png" class="slider-cloud2" alt="slider image">
-                <img src="images/home/slider/slide1/cloud3.png" class="slider-cloud3" alt="slider image">
-                <img src="images/home/slider/slide1/sun.png" class="slider-sun" alt="slider image">
-                <img src="images/home/cycle.png" class="slider-cycle" alt="">
+                <img src="https://hyeri0609.github.io/Portfolio/images/home/slider/slide1/house.png" class="img-responsive slider-house" alt="slider image">
+                <img src="https://hyeri0609.github.io/Portfolio/images/home/slider/slide1/circle1.png" class="slider-circle1" alt="slider image">
+                <img src="https://hyeri0609.github.io/Portfolio/images/home/slider/slide1/circle2.png" class="slider-circle2" alt="slider image">
+                <img src="https://hyeri0609.github.io/Portfolio/images/home/slider/slide1/cloud1.png" class="slider-cloud1" alt="slider image">
+                <img src="https://hyeri0609.github.io/Portfolio/images/home/slider/slide1/cloud2.png" class="slider-cloud2" alt="slider image">
+                <img src="https://hyeri0609.github.io/Portfolio/images/home/slider/slide1/cloud3.png" class="slider-cloud3" alt="slider image">
+                <img src="https://hyeri0609.github.io/Portfolio/images/home/slider/slide1/sun.png" class="slider-sun" alt="slider image">
+                <img src="https://hyeri0609.github.io/Portfolio/images/home/cycle.png" class="slider-cycle" alt="">
             </div>
         </div>
         <div class="preloader"><i class="fa fa-sun-o fa-spin"></i></div>
@@ -149,7 +149,7 @@
                 <div class="col-sm-4 text-center padding wow fadeIn" data-wow-duration="1000ms" data-wow-delay="300ms">
                     <div class="single-service">
                         <div class="wow scaleIn" data-wow-duration="500ms" data-wow-delay="300ms">
-                            <img src="images/home/icon1.png" alt="">
+                            <img src="https://hyeri0609.github.io/Portfolio/images/home/icon1.png" alt="">
                         </div>
                         <h2>Incredibly Responsive</h2>
                         <p>Ground round tenderloin flank shank ribeye. Hamkevin meatball swine. Cow shankle beef sirloin chicken ground round.</p>
@@ -158,7 +158,7 @@
                 <div class="col-sm-4 text-center padding wow fadeIn" data-wow-duration="1000ms" data-wow-delay="600ms">
                     <div class="single-service">
                         <div class="wow scaleIn" data-wow-duration="500ms" data-wow-delay="600ms">
-                            <img src="images/home/icon2.png" alt="">
+                            <img src="https://hyeri0609.github.io/Portfolio/images/home/icon2.png" alt="">
                         </div>
                         <h2>Superior Typography</h2>
                         <p>Hamburger ribeye drumstick turkey, strip steak sausage ground round shank pastrami beef brisket pancetta venison.</p>
@@ -167,7 +167,7 @@
                 <div class="col-sm-4 text-center padding wow fadeIn" data-wow-duration="1000ms" data-wow-delay="900ms">
                     <div class="single-service">
                         <div class="wow scaleIn" data-wow-duration="500ms" data-wow-delay="900ms">
-                            <img src="images/home/icon3.png" alt="">
+                            <img src="https://hyeri0609.github.io/Portfolio/images/home/icon3.png" alt="">
                         </div>
                         <h2>Swift Page Builder</h2>
                         <p>Venison tongue, salami corned beef ball tip meatloaf bacon. Fatback pork belly bresaola tenderloin bone pork kevin shankle.</p>
@@ -204,7 +204,7 @@
             <div class="row">
                 <div class="single-features">
                     <div class="col-sm-5 wow fadeInLeft" data-wow-duration="500ms" data-wow-delay="300ms">
-                        <img src="images/home/image1.png" class="img-responsive" alt="">
+                        <img src="https://hyeri0609.github.io/Portfolio/images/home/image1.png" class="img-responsive" alt="">
                     </div>
                     <div class="col-sm-6 wow fadeInRight" data-wow-duration="500ms" data-wow-delay="300ms">
                         <h2>Experienced and Enthusiastic</h2>
@@ -217,12 +217,12 @@
                         <P>Mollit eiusmod id chuck turducken laboris meatloaf pork loin tenderloin swine. Pancetta excepteur fugiat strip steak tri-tip. Swine salami eiusmod sint, ex id venison non. Fugiat ea jowl cillum meatloaf.</P>
                     </div>
                     <div class="col-sm-5 wow fadeInRight" data-wow-duration="500ms" data-wow-delay="300ms">
-                        <img src="images/home/image2.png" class="img-responsive" alt="">
+                        <img src="https://hyeri0609.github.io/Portfolio/images/home/image2.png" class="img-responsive" alt="">
                     </div>
                 </div>
                 <div class="single-features">
                     <div class="col-sm-5 wow fadeInLeft" data-wow-duration="500ms" data-wow-delay="300ms">
-                        <img src="images/home/image3.png" class="img-responsive" alt="">
+                        <img src="https://hyeri0609.github.io/Portfolio/images/home/image3.png" class="img-responsive" alt="">
                     </div>
                     <div class="col-sm-6 wow fadeInRight" data-wow-duration="500ms" data-wow-delay="300ms">
                         <h2>Experienced and Enthusiastic</h2>
@@ -239,28 +239,28 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div class="clients text-center wow fadeInUp" data-wow-duration="500ms" data-wow-delay="300ms">
-                        <p><img src="images/home/clients.png" class="img-responsive" alt=""></p>
+                        <p><img src="https://hyeri0609.github.io/Portfolio/images/home/clients.png" class="img-responsive" alt=""></p>
                         <h1 class="title">Happy Clients</h1>
                         <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br> Ut enim ad minim veniam, quis nostrud </p>
                     </div>
                     <div class="clients-logo wow fadeIn" data-wow-duration="1000ms" data-wow-delay="600ms">
                         <div class="col-xs-3 col-sm-2">
-                            <a href="#"><img src="images/home/client1.png" class="img-responsive" alt=""></a>
+                            <a href="#"><img src="https://hyeri0609.github.io/Portfolio/images/home/client1.png" class="img-responsive" alt=""></a>
                         </div>
                         <div class="col-xs-3 col-sm-2">
-                            <a href="#"><img src="images/home/client2.png" class="img-responsive" alt=""></a>
+                            <a href="#"><img src="https://hyeri0609.github.io/Portfolio/images/home/client2.png" class="img-responsive" alt=""></a>
                         </div>
                          <div class="col-xs-3 col-sm-2">
-                            <a href="#"><img src="images/home/client3.png" class="img-responsive" alt=""></a>
+                            <a href="#"><img src="https://hyeri0609.github.io/Portfolio/images/home/client3.png" class="img-responsive" alt=""></a>
                         </div>
                          <div class="col-xs-3 col-sm-2">
-                            <a href="#"><img src="images/home/client4.png" class="img-responsive" alt=""></a>
+                            <a href="#"><img src="https://hyeri0609.github.io/Portfolio/images/home/client4.png" class="img-responsive" alt=""></a>
                         </div>
                          <div class="col-xs-3 col-sm-2">
-                            <a href="#"><img src="images/home/client5.png" class="img-responsive" alt=""></a>
+                            <a href="#"><img src="https://hyeri0609.github.io/Portfolio/images/home/client5.png" class="img-responsive" alt=""></a>
                         </div>
                          <div class="col-xs-3 col-sm-2">
-                            <a href="#"><img src="images/home/client6.png" class="img-responsive" alt=""></a>
+                            <a href="#"><img src="https://hyeri0609.github.io/Portfolio/images/home/client6.png" class="img-responsive" alt=""></a>
                         </div>
                     </div>
                 </div>
@@ -273,14 +273,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 text-center bottom-separator">
-                    <img src="images/home/under.png" class="img-responsive inline" alt="">
+                    <img src="https://hyeri0609.github.io/Portfolio/images/home/under.png" class="img-responsive inline" alt="">
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <div class="testimonial bottom">
                         <h2>Testimonial</h2>
                         <div class="media">
                             <div class="pull-left">
-                                <a href="#"><img src="images/home/profile1.png" alt=""></a>
+                                <a href="#"><img src="https://hyeri0609.github.io/Portfolio/images/home/profile1.png" alt=""></a>
                             </div>
                             <div class="media-body">
                                 <blockquote>Nisi commodo bresaola, leberkas venison eiusmod bacon occaecat labore tail.</blockquote>
@@ -289,7 +289,7 @@
                          </div>
                         <div class="media">
                             <div class="pull-left">
-                                <a href="#"><img src="images/home/profile2.png" alt=""></a>
+                                <a href="#"><img src="https://hyeri0609.github.io/Portfolio/images/home/profile2.png" alt=""></a>
                             </div>
                             <div class="media-body">
                                 <blockquote>Capicola nisi flank sed minim sunt aliqua rump pancetta leberkas venison eiusmod.</blockquote>
